--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             </dependency>
 
             <dependency>
+                <groupId>io.vavr</groupId>
+                <artifactId>vavr</artifactId>
+                <version>0.10.0</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-streams</artifactId>
                 <version>2.0.1</version>
